add data as citation instead of footnote

--- a/doc/naaclhlt2018-latex/paper.bib
+++ b/doc/naaclhlt2018-latex/paper.bib
@@ -380,5 +380,14 @@
 	Booktitle = {Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
 	Pages = {1848--1858},
 	Title = {A trainable spaced repetition model for language learning},
-	Volume = {1},
-	Year = {2016}}
+	Volume = 1,
+	Year = 2016}
+
+@misc{8SWHNO_2018,
+author = {Settles, Burr},
+publisher = {Harvard Dataverse},
+title = {Data for the 2018 Duolingo Shared Task on Second Language Acquisition Modeling (SLAM)},
+year = 2018,
+doi = {10.7910/DVN/8SWHNO},
+url = {https://doi.org/10.7910/DVN/8SWHNO}
+}
