--- a/doc/naaclhlt2018-latex/paper.tex
+++ b/doc/naaclhlt2018-latex/paper.tex
@@ -292,7 +292,7 @@ weighted averages did not clearly outperform a simple average.
 To tune model hyper-parameters and evaluate the usefulness of features, we first
 trained the models on the {\tt train} data set and evaluated them on the {\tt dev}
 data set. Details of the datasets and the actual files are provided on the
-Harvard Dataverse\footnote{https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/8SWHNO}.
+Harvard Dataverse \cite{8SWHNO_2018}.
 Once the model structure was finalized, we trained on the combined
 {\tt train} and {\tt dev} data and produced predictions for the {\tt test} data. The
 LightGBM hyperparameters used for each model are listed in Table~\ref{lightgbm-params}.
