add copy edit to paper requested by conference, update competition link

--- a/doc/naaclhlt2018-latex/paper.tex
+++ b/doc/naaclhlt2018-latex/paper.tex
@@ -243,7 +243,7 @@ one and $n$ exercises into the test set.
 
 \subsection{Modeling}
 
-\begin{table}[t!]
+\begin{table*}[t!]
 \small
 \begin{center}
 \begin{tabular}{|l|llll|}
@@ -262,7 +262,7 @@ one and $n$ exercises into the test set.
 \caption{\label{lightgbm-params} Parameters of final LightGBM models. See
   LightGBM documentation for more information; all other parameters were left at
 their default values.}
-\end{table}
+\end{table*}
 
 After generating all of the features for the training data, we trained GBDT models to minimize log loss. GBDT works by
 iteratively building regression trees, each of which seeks to minimize the
